--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-index.html
+
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <!-- Required Meta Tags Always Come First -->
+    <meta charset="utf-8">
+    <link rel="dns-prefetch" href="//apps.slmgr.com"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Title -->
+    <title></title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico">
+    <!--  Meta tags -->
+    <meta name="keywords" content="江西公务员,江西公务员局,江西公务员考试,江西省公务员报名">
+    <meta name="description" content="江西公务网(scs.jx.cn)提供2025国家公务员考试,2025国考公告、2025江西省考公告、国考报名时间/入口/职位表、2025江西省公务员考试、公务员笔试面试培训等公务员招考公告/大纲,成绩查询,笔试面试备考辅导资料,公考视频,历年试题及答案下载等公务员考试资讯服务。">
+    <!-- Open Graph -->
+    <meta property="og:title" content="江西省公务员局">
+    <meta property="og:type" content="WebSite">
+    <meta property="og:url" content="https://scs.jx.cn/">
+    <meta property="og:image" content="//apps.slmgr.com/design/8ce4d55413d851395f3799619b3a906f.png">
+    <meta property="og:description" content="江西公务网(scs.jx.cn)提供2025国家公务员考试,2025国考公告、2025江西省考公告、国考报名时间/入口/职位表、2025江西省公务员考试、公务员笔试面试培训等公务员招考公告/大纲,成绩查询,笔试面试备考辅导资料,公考视频,历年试题及答案下载等公务员考试资讯服务。名">
+    <meta property="og:site_name" content="江西省公务员局">
+    <!-- CSS Implementing Plugins -->
+    <link rel="stylesheet" href="//apps.slmgr.com/dist/style.css" crossorigin="anonymous">
+    <!-- CSS Template -->
+    <link rel="stylesheet" href="//apps.slmgr.com/dist/jxgwy/bundle.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="//apps.slmgr.com/dist/jxgwy/5f3799619b3a.min.css" crossorigin="anonymous">
+    <style></style>
+    <!-- 以下是 www.jxgwy.com 网站所使用的统计代码，如果你需使用本页面代码，请将下面的统计代码删掉！！！ -->
+    <script src="//apps.slmgr.com/dist/jxgwy/2e20ee91873a63f80bce0b12f2715b8b.min.js"></script>
+    <!-- 上面是 www.jxgwy.com 网站所使用的统计代码，如果你需使用本页面代码，请将上面的统计代码删掉！！！ -->
+</head>
+<body>
+<h1>Hello, world!</h1>
+<h3>江西公务网: <a href="//scs.jx.cn" target="_blank">https://scs.jx.cn</a></h3>
+<h2>江西公考网: <a href="//www.jxgwy.cn" target="_blank">https://www.jxgwy.cn</a></h2>
+<h1>江西公务网: <a href="//www.jxgwy.com" target="_blank">https://www.jxgwy.com</a></h1>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?2e20ee91873a63f80bce0b12f2715b8b";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+</body>
+</html>
